중간 이후 지금까지 수정한거